--- a/index.html
+++ b/index.html
@@ -79,42 +79,73 @@
   </section>
 
 <!-- PICK YOUR PATH + NEEDS -->
-<section class="section alt" style="padding:3.5rem 0;background:linear-gradient(180deg,#f6f8fa,#e9f3f1)">
+<section class="section alt pick-path">
   <div class="container">
-
-    <!-- Strong CTA panel -->
-    <div class="cta-panel">
-      <div>
-        <h2 class="cta-title">Pick your path</h2>
-        <p class="cta-sub">Choose the support you need now — you can always add more later.</p>
-      </div>
-      <div class="cta-links">
-        <a class="btn btn-lg" href="/services/launch.html" aria-label="Go to Launch services">Launch</a>
-        <a class="btn btn-lg btn-outline-strong" href="/services/run.html" aria-label="Go to Run services">Run</a>
-        <a class="btn btn-lg btn-outline-strong" href="/services/grow.html" aria-label="Go to Grow services">Grow</a>
-      </div>
+    <div class="pp-head">
+      <h2>Pick your path</h2>
+      <p class="lede">Choose the support that matches where you are right now. Clear outcomes, simple timelines, transparent starting prices.</p>
     </div>
 
-    <!-- Needs list (kept concise) -->
-    <div class="split" style="margin-top:2rem;grid-template-columns:1fr;">
-      <div>
-        <h3>What small businesses ask for most</h3>
-        <ul class="list">
-          <li>Streamlined systems that save time and reduce admin</li>
-          <li>Clear pricing, proposals and tender support to win work</li>
-          <li>Reliable data and process control during growth</li>
-          <li>Websites & online tools that look professional and work properly</li>
+    <div class="pp-cards">
+      <!-- LAUNCH -->
+      <article class="pp-card">
+        <div class="pp-badge">Launch</div>
+        <h3>Get online & get found</h3>
+        <p class="pp-outcome">Look credible fast and start capturing enquiries within days.</p>
+        <ul class="pp-list">
+          <li>Launch-ready site + Google Business Profile</li>
+          <li>Simple brand kit (logo, colours, tone)</li>
+          <li>Contact/booking forms & basic SEO</li>
         </ul>
-        <div class="cta-row">
-          <a class="text-link" href="/services/launch.html">See Launch →</a>
-          <a class="text-link" href="/services/run.html">See Run →</a>
-          <a class="text-link" href="/services/grow.html">See Grow →</a>
+        <div class="pp-meta">
+          <span>Typical timeline: <strong>1–2 weeks</strong></span>
+          <span>From <strong>£399</strong></span>
         </div>
-      </div>
+        <a class="btn pp-btn" href="/services/launch.html">See Launch details</a>
+      </article>
+
+      <!-- RUN -->
+      <article class="pp-card pp-card-reco">
+        <div class="pp-badge">Run</div>
+        <h3>Streamline how you work</h3>
+        <p class="pp-outcome">Reduce admin, quote faster, and keep everything consistent.</p>
+        <ul class="pp-list">
+          <li>Process fixes & lightweight automation</li>
+          <li>Proposal & tender templates that win work</li>
+          <li>Simple systems: email, invoicing, CRM basics</li>
+        </ul>
+        <div class="pp-meta">
+          <span>Typical timeline: <strong>2–4 weeks</strong></span>
+          <span>From <strong>£799</strong></span>
+        </div>
+        <a class="btn pp-btn" href="/services/run.html">See Run details</a>
+      </article>
+
+      <!-- GROW -->
+      <article class="pp-card">
+        <div class="pp-badge">Grow</div>
+        <h3>Scale with control</h3>
+        <p class="pp-outcome">Plan growth, integrate tools and train the team without chaos.</p>
+        <ul class="pp-list">
+          <li>Quarterly priorities & simple scorecard</li>
+          <li>Integrations: website ↔ CRM ↔ email</li>
+          <li>Change management & team training</li>
+        </ul>
+        <div class="pp-meta">
+          <span>Typical timeline: <strong>4–8 weeks</strong></span>
+          <span>From <strong>£1,399</strong></span>
+        </div>
+        <a class="btn pp-btn" href="/services/grow.html">See Grow details</a>
+      </article>
     </div>
 
+    <div class="pp-footer">
+      <a class="text-link" href="/services/index.html">Compare all services →</a>
+      <span class="pp-note">Not sure where to start? <a href="/contact.html">Book a quick chat</a> and we’ll point you to the right option.</span>
+    </div>
   </div>
 </section>
+
 
 
 <section class="section" style="background:#fff;padding:4rem 0;">
