--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
   <link rel="icon" href="/assets/logo.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="/assets/styles.css">
+  /* Pick your path */
+.pick-path{ background:linear-gradient(180deg,#f6f8fa,#e9f3f1); }
+.pp-head{ max-width:820px; }
+.pp-head h2{ margin:0 0 .4rem 0 }
+.pp-cards{
+  margin-top:1.2rem;
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:1rem;
+}
+@media (max-width:980px){ .pp-cards{ grid-template-columns:1fr; } }
+
+.pp-card{
+  background:#fff;
+  border:1px solid #e1edf0;
+  border-radius:18px;
+  padding:1.3rem 1.2rem 1.2rem;
+  box-shadow:0 10px 24px rgba(6,30,41,.08);
+  display:flex; flex-direction:column; gap:.6rem;
+}
+.pp-card-reco{ border:2px solid var(--sea); box-shadow:0 14px 28px rgba(30,140,122,.12); }
+
+.pp-badge{
+  align-self:flex-start;
+  background:var(--foam);
+  color:var(--sea);
+  border:1px solid #cfe9e4;
+  border-radius:999px;
+  padding:.25rem .6rem;
+  font-weight:700; font-size:.8rem;
+}
+.pp-outcome{ color:#334b5a; margin:.1rem 0 .2rem; }
+.pp-list{ margin:.2rem 0 .2rem; padding:0; list-style:none; }
+.pp-list li{ margin:.35rem 0; padding-left:1.1rem; position:relative; }
+.pp-list li::before{ content:"•"; position:absolute; left:0; color:var(--sea); font-weight:900; }
+
+.pp-meta{ display:flex; justify-content:space-between; gap:.8rem; color:#395767; font-size:.95rem; }
+.pp-btn{ margin-top:.2rem; align-self:flex-start; }
+
+.pp-footer{
+  margin-top:1rem;
+  display:flex; gap:1rem; align-items:center; flex-wrap:wrap;
+}
+.pp-note{ color:#395767; }
+
   /* Big CTA panel that doesn't get lost */
 .cta-panel{
   display:grid;
